@@ -38,7 +38,7 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b11";
+$gallery->version = "1.3.5-cvs-b12";
 $gallery->config_version = 34;
 $gallery->album_version = 10;
 $gallery->remote_protocol_version = 1;
@@ -58,4 +58,8 @@ $modversion['official'] = 0; // Official PostNuke Approved Module? 1 = yes, 0 = 
 $modversion['author'] = 'Bharat Mediratta'; // Author
 $modversion['contact'] = $gallery->url; // The Authors Website or Contact Email Address
 $modversion['admin'] = 0; // Leave at 0
+if (!isset($modname)) {
+    $modname = $name;
+}
+$modversion['securityschema'] = array("$modname::" => '::'); // Permission Component
 ?>
